[package]
name = "tofn"
version = "0.1.0"
authors = ["Gus Gutoski <gus@axelar.network>", "Milap Sheth <milap@axelar.network>"]
edition = "2018"
license = "MIT OR Apache-2.0"

[lib]
crate-type = ["lib"]

[dependencies]
serde = { version = "1.0.159", features = ["derive"] }
serde_json = {version = "1.0"}
bincode = "1.3.3"
rand_chacha = "0.3"
hmac = "0.11"
zeroize = { version = "1.4", features = ["zeroize_derive"] }
serde_bytes = "0.11"
# k256 baggage
k256 = { version = "0.9", features = ["ecdsa", "zeroize"], default-features = false }
ecdsa = { version = "0.12", features = ["digest"], default-features = false } # needed only for FromDigest trait
rand = "0.8"
sha2 = { version = "0.9", features = ["std", "asm"], default-features = false }
sha3 = { version = "0.9", default-features = false }
arrayref = "0.3"
# logging
tracing = {version = "0.1", default-features = false}

libpaillier = { git = "https://github.com/axelarnetwork/paillier-rs", features = ["gmp"], default-features = false }
bls12_381 = {version ="0.8.0"}
group = "0.13.0"
aes = "0.8.2"
vec_map = "0.8.2"
ark-serialize = "0.4.2"

[dev-dependencies]
tracing-test = "0" # enable logging for tests
tracing-subscriber = { version = "0", features = ["env-filter", "fmt"], default-features = false }
criterion = "0.3"

[[bench]]
name = "safe_primes"
harness = false

# Don't abort in case there is a panic to clean up data
[profile.dev]
panic = "unwind"

[profile.release]
panic = "unwind"

[features]
malicious = []

[build-dependencies]
tonic-build = "0.9.1"
